--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <h1> Sai Yashaswi Gopularam</h1>
+        <h3>India</h3>
     </head>
     <body>
 
+        <hr>
     </body>
 </html>
